# emecom_SignalingGame_as_betaVAE

./: LICENSE  README.md  pyproject.toml
emecom_gen/analysis/: analysis_harris_scheme.py  average_metrics_over_seeds.py  common_argparser.py  plot_message_lengths.py
emecom_gen/data/: __init__.py  batch.py  dataset_base.py
emecom_gen/data/datamodules/: __init__.py  attribute_value_data_module.py  image_data_module.py  zipfian_onehot_data_module.py
emecom_gen/metrics/: __init__.py  dump_language.py  harris_scheme_based_metrics.py  language_similarity.py  speakers_synchronization.py  topographic_similarity.py
emecom_gen/model/: dropout_function_maker.py  symbol_prediction_layer.py  value_estimation_layer.py
emecom_gen/model/game/: __init__.py  baseline.py  beta_scheduler.py  ensemble_beta_vae_game.py  ensemble_em_game.py  game_base.py  game_output.py  gibbs_sampling.py  moe_joint_beta_vae_game.py
emecom_gen/model/message_prior/: __init__.py  hmm_message_prior.py  length_exponential_message_prior.py  message_prior_base.py  message_prior_output.py  uniform_message_prior.py
emecom_gen/model/receiver/: __init__.py  receiver_base.py  receiver_output.py  rnn_receiver.py
emecom_gen/model/sender/: __init__.py  rnn_gs_sender.py  rnn_reinforce_sender.py  sender_base.py  sender_output.py
emecom_gen/zoo/: common_argparser.py
emecom_gen/zoo/attval_signaling_game/: additional_archs.py  train.py
emecom_gen/zoo/zipfian_onehot_signaling_game/: train.py  train_em.py
